--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,39 @@
 
 </head>
 <body>
+	<header>
+		<div class="container">
+			<div class="logo">
+				<p>
+					Author
+				</p>
+			</div>
+			<div class="menu">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Service</a></li>
+					<li><a href="#">Portfolio</a></li>
+					<li><a href="#">Team</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+		</div>
+	</header>
+	<!-- <div class="slider">
+
+		<ul class="bxslider">
+			<li>
+				<div></div>
+			</li>
+			<li>
+				<div></div>
+			</li>
+			<li>
+				<div></div>
+			</li>
+		</ul>
+	</div> -->
 
 
 
