--- a/app/index.html
+++ b/app/index.html
@@ -6,26 +6,28 @@
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/main.css">
 
+	<button class="hamburger" style="display: none;">&#9776;</button>
+  	<button class="cross">&#735;</button> 
+
 </head>
 <body>
 	<header>
-		<div class="container">
-			<div class="logo">
-				<p>
-					Author
-				</p>
-			</div>
-			<div class="menu">
-				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Service</a></li>
-					<li><a href="#">Portfolio</a></li>
-					<li><a href="#">Team</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-			</div>
-		</div>
+		<p>Author</p>
+		<ul class="main-menu">
+			<li><a href="">Home</a></li>
+			<li><a href="#">Service</a></li>
+			<li><a href="#">Portfolio</a></li>
+			<li><a href="#">Team</a></li>
+			<li><a href="#">Blog</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+		  <ul class="menu">
+		    <a href="#"><li>LINK ONE</li></a>
+		    <a href="#"><li>LINK TWO</li></a>
+		    <a href="#"><li>LINK THREE</li></a>
+		    <a href="#"><li>LINK FOUR</li></a>
+		    <a href="#"><li>LINK FIVE</li></a>
+		  </ul>
 	</header>
 	<!-- <div class="slider">
 
