--- a/app/index.html
+++ b/app/index.html
@@ -6,28 +6,35 @@
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/main.css">
 
-	<button class="hamburger" style="display: none;">&#9776;</button>
+	<button class="hamburger">&#9776;</button>
   	<button class="cross">&#735;</button> 
 
 </head>
 <body>
 	<header>
-		<p>Author</p>
-		<ul class="main-menu">
-			<li><a href="">Home</a></li>
-			<li><a href="#">Service</a></li>
-			<li><a href="#">Portfolio</a></li>
-			<li><a href="#">Team</a></li>
-			<li><a href="#">Blog</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
-		  <ul class="menu">
-		    <a href="#"><li>LINK ONE</li></a>
-		    <a href="#"><li>LINK TWO</li></a>
-		    <a href="#"><li>LINK THREE</li></a>
-		    <a href="#"><li>LINK FOUR</li></a>
-		    <a href="#"><li>LINK FIVE</li></a>
-		  </ul>
+		<div class="logo">
+			<p>Author</p>
+		</div>
+		<div class="main-menu">
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Service</a></li>
+				<li><a href="#">Portfolio</a></li>
+				<li><a href="#">Team</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+		</div>
+		<div class="menu">
+			<ul>
+			    <a href="#"><li>Home</li></a>
+			    <a href="#"><li>Service</li></a>
+			    <a href="#"><li>Portfolio</li></a>
+			    <a href="#"><li>Team</li></a>
+			    <a href="#"><li>Blog</li></a>
+			    <a href="#"><li>Contact</li></a>
+			</ul>
+		</div>
 	</header>
 	<!-- <div class="slider">
 
