--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,103 @@
 				</div>
 			</div>
 		</div>
+		<div class="plans-cont">
+			<div class="plans">
+				<div class="plan-info">
+					<table>
+						<tr>
+							<td class="plan-header">Basic</td>
+						</tr>
+						<tr>
+							<td class="price">$5.01/ Month</td>
+						</tr>
+						<tr>
+							<td>Lorem ipsum </td>
+						</tr>
+						<tr>
+							<td>Dolor sit amet, consect</td>
+						</tr>
+						<tr>
+							<td>Adipiscing elit</td>
+						</tr>
+						<tr>
+							<td>Proin commodo turpis</td>
+						</tr>
+						<tr>
+							<td>lacus pulvinarvel</td>
+						</tr>
+						<tr>
+							<td>Prnare nisi pretium.</td>
+						</tr>
+						<tr>
+							<td class="btn"><a href="#" class="button">Buy now</a></td>
+						</tr>
+					</table>
+				</div>
+				<div class="plan-info">
+					<table>
+						<tr>
+							<td class="plan-header">Pro</td>
+						</tr>
+						<tr>
+							<td class="price">$10.01/ Month</td>
+						</tr>
+						<tr>
+							<td>Lorem ipsum </td>
+						</tr>
+						<tr>
+							<td>Dolor sit amet, consect</td>
+						</tr>
+						<tr>
+							<td>Adipiscing elit</td>
+						</tr>
+						<tr>
+							<td>Proin commodo turpis</td>
+						</tr>
+						<tr>
+							<td>lacus pulvinarvel</td>
+						</tr>
+						<tr>
+							<td>Prnare nisi pretium.</td>
+						</tr>
+						<tr>
+							<td class="btn"><a href="#" class="button">Buy now</a></td>
+						</tr>
+					</table>
+				</div>
+				<div class="plan-info">
+					<table>
+						<tr>
+							<td class="plan-header">Premium</td>
+						</tr>
+						<tr>
+							<td class="price">$20.01/ Month</td>
+						</tr>
+						<tr>
+							<td>Lorem ipsum </td>
+						</tr>
+						<tr>
+							<td>Dolor sit amet, consect</td>
+						</tr>
+						<tr>
+							<td>Adipiscing elit</td>
+						</tr>
+						<tr>
+							<td>Proin commodo turpis</td>
+						</tr>
+						<tr>
+							<td>lacus pulvinarvel</td>
+						</tr>
+						<tr>
+							<td>Prnare nisi pretium.</td>
+						</tr>
+						<tr>
+							<td class="btn"><a href="#" class="button">Buy now</a></td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
 	</div>
 
 
