--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="style.css">
 
 
 
@@ -198,6 +199,37 @@
 			</div>
 		</div>
 	</div>
+	<footer>
+		<h1>Contact Us</h1>
+		<div class="contact">
+			<div class="cont-info">
+				<h4>Get in touch with us</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/> Error, aperiam suscipit veritatis in ea doloremque</p>
+				<div class="social">
+					<div class="fb"><a href="#"><i class="icon-facebook"></i></a></div>
+					<div class="tw"><a href="#"><i class="icon-twitter"></i></a></div>
+					<div class="gg"><a href="#"><i class="icon-google-plus"></i></a></div>
+				</div>
+				<div class="phone">
+					<p>Posted by Dospel &#38; GanjaParker</p>
+					<p>+XX-XXXX-XXXX-XX</p>
+					<p>info@mail.com</p>
+				</div>
+			</div>
+			<div class="cont-form">
+				<div class="mn">
+					<input type="text" class="name" placeholder="Name">
+					<input type="text" class="email" placeholder="Email">
+				</div>
+				<div class="text">
+					<textarea class="message" rows="15" name="message" id="message"  placeholder="Message"></textarea>
+				</div>
+				<div class="send">
+					<button>Send</button>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 
 
