--- a/app/index.html
+++ b/app/index.html
@@ -11,13 +11,13 @@
 
 </head>
 <body>
-	<header>
+	<header id="head">
 		<div class="logo">
 			<p>Author</p>
 		</div>
 		<div class="main-menu">
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="#head">Home</a></li>
 				<li><a href="#">Service</a></li>
 				<li><a href="#">Portfolio</a></li>
 				<li><a href="#team">Team</a></li>
@@ -103,98 +103,62 @@
 		</div>
 		<div class="plans-cont">
 			<div class="plans">
-				<div class="plan-info">
-					<table>
-						<tr>
-							<td class="plan-header">Basic</td>
-						</tr>
-						<tr>
-							<td class="price">$5.01/ Month</td>
-						</tr>
-						<tr>
-							<td>Lorem ipsum </td>
-						</tr>
-						<tr>
-							<td>Dolor sit amet, consect</td>
-						</tr>
-						<tr>
-							<td>Adipiscing elit</td>
-						</tr>
-						<tr>
-							<td>Proin commodo turpis</td>
-						</tr>
-						<tr>
-							<td>lacus pulvinarvel</td>
-						</tr>
-						<tr>
-							<td>Prnare nisi pretium.</td>
-						</tr>
-						<tr>
-							<td class="btn"><a href="#" class="button">Buy now</a></td>
-						</tr>
-					</table>
+				<div class="plan">
+					<div class="plan-header basic-2">
+						<p>Basic</p>
+					</div>
+					<div class="plan-price">
+						<p>$5.01/ Month</p>
+					</div>
+					<div class="plan-cont">
+						<p>Lorem ipsum</p>
+						<p>Dolor sit amet, consect</p>
+						<p>Adipiscing elit</p>
+						<p>Proin commodo turpis</p>
+						<p>lacus pulvinarvel</p>
+						<p>Prnare nisi pretium.</p>
+					</div>
+					<div class="btn">
+						<a href="#" class="plan-button">Buy now</a>
+					</div>
 				</div>
-				<div class="plan-info">
-					<table>
-						<tr>
-							<td class="plan-header">Pro</td>
-						</tr>
-						<tr>
-							<td class="price">$10.01/ Month</td>
-						</tr>
-						<tr>
-							<td>Lorem ipsum </td>
-						</tr>
-						<tr>
-							<td>Dolor sit amet, consect</td>
-						</tr>
-						<tr>
-							<td>Adipiscing elit</td>
-						</tr>
-						<tr>
-							<td>Proin commodo turpis</td>
-						</tr>
-						<tr>
-							<td>lacus pulvinarvel</td>
-						</tr>
-						<tr>
-							<td>Prnare nisi pretium.</td>
-						</tr>
-						<tr>
-							<td class="btn"><a href="#" class="button">Buy now</a></td>
-						</tr>
-					</table>
+				<div class="plan pro">
+					<div class="plan-header pro-2">
+						<p>Pro</p>
+					</div>
+					<div class="plan-price">
+						<p>$10.01/ Month</p>
+					</div>
+					<div class="plan-cont">
+						<p>Lorem ipsum</p>
+						<p>Dolor sit amet, consect</p>
+						<p>Adipiscing elit</p>
+						<p>Proin commodo turpis</p>
+						<p>lacus pulvinarvel</p>
+						<p>Prnare nisi pretium.</p>
+					</div>
+					<div class="btn">
+						<a href="#" class="plan-button">Buy now</a>
+					</div>
 				</div>
-				<div class="plan-info">
-					<table>
-						<tr>
-							<td class="plan-header">Premium</td>
-						</tr>
-						<tr>
-							<td class="price">$20.01/ Month</td>
-						</tr>
-						<tr>
-							<td>Lorem ipsum </td>
-						</tr>
-						<tr>
-							<td>Dolor sit amet, consect</td>
-						</tr>
-						<tr>
-							<td>Adipiscing elit</td>
-						</tr>
-						<tr>
-							<td>Proin commodo turpis</td>
-						</tr>
-						<tr>
-							<td>lacus pulvinarvel</td>
-						</tr>
-						<tr>
-							<td>Prnare nisi pretium.</td>
-						</tr>
-						<tr>
-							<td class="btn"><a href="#" class="button">Buy now</a></td>
-						</tr>
-					</table>
+				<div class="plan">
+					<div class="plan-header premium-2">
+						<p>Premium</p>
+					</div>
+					<div class="plan-price">
+						<p>$20.01/ Month</p>
+					</div>
+					<div class="plan-cont">
+						<p>Lorem ipsum</p>
+						<p>Dolor sit amet, consect</p>
+						<p>Adipiscing elit</p>
+						<p>Proin commodo turpis</p>
+						<p>lacus pulvinarvel</p>
+						<p>Prnare nisi pretium.</p>
+					</div>
+					<div class="btn">
+						<a href="#" class="plan-button">Buy now</a>
+					</div>
 				</div>
 			</div>
 		</div>
