--- a/app/index.html
+++ b/app/index.html
@@ -8,25 +8,39 @@
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="style.css">		  
-
+	
 
 </head>
-<body>
+<body id="home">
 	<header id="head">
-		<div class="head">
-			<div class="logo">
+		<div class="head" >
+			<div class="logo" >
 				<p>Author</p>
 			</div>
 			<div class="main-menu">
 				<ul>
-					<li><a href="#head">Home</a></li>
-					<li><a href="#">Service</a></li>
-					<li><a href="#">Portfolio</a></li>
+					<li><a href="#home">Home</a></li>
+					<li><a href="#service">Service</a></li>
+					<li><a href="">Portfolio</a></li>
 					<li><a href="#team">Team</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="">Blog</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
+			<div class="humb">
+				<button class="hamburger">&#9776;</button>
+  				<button class="cross">&#735;</button>
+			</div>
+			<div class="menu">
+			  <ul>
+			    <a href="#home"><li>Home</li></a>
+			    <a href="#service"><li>Service</li></a>
+			    <a href=""><li>Portfolio</li></a>
+			    <a href="#team"><li>Team</li></a>
+			    <a href=""><li>Blog</li></a>
+			    <a href="#contact"><li>Contact</li></a>
+			  </ul>
+			</div> 
 		</div>
 	</header>
 	<div class="slider">
@@ -104,7 +118,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="plans-cont">
+		<div class="plans-cont" id="service">
 			<div class="plans">
 				<div class="plan">
 					<div class="plan-header basic-2">
@@ -166,16 +180,16 @@
 			</div>
 		</div>
 	</div>
-	<footer>
+	<footer id="contact">
 		<h1>Contact Us</h1>
 		<div class="contact">
 			<div class="cont-info">
 				<h4>Get in touch with us</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/> Error, aperiam suscipit veritatis in ea doloremque</p>
 				<div class="social">
-					<div class="fb"><a href="#"><i class="icon-facebook"></i></a></div>
-					<div class="tw"><a href="#"><i class="icon-twitter"></i></a></div>
-					<div class="gg"><a href="#"><i class="icon-google-plus"></i></a></div>
+					<div class="fb"><a href="#"><span class="icon-facebook"></span></a></div>
+					<div class="tw"><a href="#"><span class="icon-twitter"></span></a></div>
+					<div class="gg"><a href="#"><span class="icon-google-plus"></span></a></div>
 				</div>
 				<div class="phone">
 					<p>Posted by Dospel &#38; GanjaParker</p>
